--- a/src/public/estilos.css
+++ b/src/public/estilos.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 .codigo{
     border: 1px solid gray;
     background-color: rgb(247, 247, 247) ;
